dev: Update locales

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -353,13 +353,20 @@
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.editWebhook": "Xxxx xxxxxxx",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.updateSuccess": "Xxxxxxx xxxxxxx",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.deleteSuccess": "Xxxxxxx xxxxxxx",
-  "console.views.device-add.configuration-form.index.activationModeWarning": "Xxxxxxxxxx xxxx xxxxxxxxx xxxxxxxxxxx",
-  "console.views.device-add.configuration-form.index.nsActivationModeWarning": "XXX xxx xxxxxxxxx xxxxxxxxxx xxxx xxxxxxxxx xxxxxxxxxxx",
-  "console.views.device-add.configuration-form.index.jsActivationModeWarning": "XXXX xxxx xxxxxxxxx xxxxxxxxxxx",
-  "console.views.device-add.configuration-form.index.activationModeNone": "Xx xxx xxxxxxxxx xxxxxxxxxx",
-  "console.views.device-add.configuration-form.index.start": "Xxxxx",
-  "console.views.device-add.configuration-form.index.preparation": "Xxxxxxxxxxx",
-  "console.views.device-add.device-add.title": "Xxx xxx xxx xxxxxx",
+  "console.views.device-add.device-add.title": "Xxxxxxxx xxx xxxxxx",
+  "console.views.device-add.manual.configuration-form.index.activationModeWarning": "Xxxxxxxxxx xxxx xxxxxxxxx xxxxxxxxxxx",
+  "console.views.device-add.manual.configuration-form.index.nsActivationModeWarning": "XXX xxx xxxxxxxxx xxxxxxxxxx xxxx xxxxxxxxx xxxxxxxxxxx",
+  "console.views.device-add.manual.configuration-form.index.jsActivationModeWarning": "XXXX xxxx xxxxxxxxx xxxxxxxxxxx",
+  "console.views.device-add.manual.configuration-form.index.activationModeNone": "Xx xxx xxxxxxxxx xxxxxxxxxx",
+  "console.views.device-add.manual.configuration-form.index.start": "Xxxxx",
+  "console.views.device-add.manual.configuration-form.index.preparation": "Xxxxxxxxxxx",
+  "console.views.device-add.manual.manual.register": "Xxxxxxxx xxxxxxxx",
+  "console.views.device-add.manual.wizard.prompt.index.modalTitle": "Xxxxxxx xxxxxxxxxx",
+  "console.views.device-add.manual.wizard.prompt.index.modalMessage": "Xxx xxx xxxx xxx xxxx xx xxxxx xxxx xxxx xxx xxxxx xxx xxx xxxxxx xxxxxxxx? Xxxxx xxx xxxxxxx xxxxxxx xxxx xxxx xx xxxx.",
+  "console.views.device-add.manual.wizard.prompt.index.modalApproveText": "Xxxxxxx xxxxxxxxxx",
+  "console.views.device-add.manual.wizard.prompt.index.modalCancelText": "Xxxx xx xxxx xxxx",
+  "console.views.device-add.messages.repositoryTabTitle": "Xxxx Xxx Xxxxxx Xxxxxx Xxxxxxxxxx",
+  "console.views.device-add.messages.manualTabTitle": "Xxxxxxxx",
   "console.views.device-add.messages.basicTitle": "Xxxxx xxxxxxxx",
   "console.views.device-add.messages.basicDescription": "Xxx xxxxxx XX'x, Xxxx xxx Xxxxxxxxxxx",
   "console.views.device-add.messages.basicDetails": "Xxxxxxx xxxxxxx xxxxxxxx xx xx xxx xxxxxx",
@@ -369,10 +376,27 @@
   "console.views.device-add.messages.appDescription": "Xxxxxxxxxxx xxxxxxx xxx xx xxxxxxx/xxxxxxx XxXxXXX xxxxxxx.",
   "console.views.device-add.messages.joinTitle": "Xxxx xxxxxxxx",
   "console.views.device-add.messages.joinDescription": "Xxxx xxxx, XxxXX xxx xxx xxxxxx.",
-  "console.views.device-add.wizard.prompt.index.modalTitle": "Xxxxxxx xxxxxxxxxx",
-  "console.views.device-add.wizard.prompt.index.modalMessage": "Xxx xxx xxxx xxx xxxx xx xxxxx xxxx xxxx xxx xxxxx xxx xxx xxxxxx xxxxxxxx? Xxxxx xxx xxxxxxx xxxxxxx xxxx xxxx xx xxxx.",
-  "console.views.device-add.wizard.prompt.index.modalApproveText": "Xxxxxxx xxxxxxxxxx",
-  "console.views.device-add.wizard.prompt.index.modalCancelText": "Xxxx xx xxxx xxxx",
+  "console.views.device-add.messages.otherOption": "Xxxxxx",
+  "console.views.device-add.messages.typeToSearch": "Xxxx xx xxxxxxx",
+  "console.views.device-add.messages.unknownHwOption": "Xxxxxxx xxx.",
+  "console.views.device-add.repository.device-registration.index.fetching": "Xxxxxxxx xxxxxxxxx",
+  "console.views.device-add.repository.device-selection.band-select.band-select.title": "Xxxxxxx (Xxxxxx)",
+  "console.views.device-add.repository.device-selection.brand-select.brand-select.title": "Xxxxx",
+  "console.views.device-add.repository.device-selection.brand-select.brand-select.warning": "Xxx xxxxxx xxxxxx xxxxxxxxxxx",
+  "console.views.device-add.repository.device-selection.brand-select.brand-select.noOptionsMessage": "Xx xxxxxxxx xxxxx xxxxx",
+  "console.views.device-add.repository.device-selection.fw-version-select.fw-version-select.title": "Xxxxxxxx Xxx.",
+  "console.views.device-add.repository.device-selection.hw-version-select.hw-version-select.title": "Xxxxxxxx Xxx.",
+  "console.views.device-add.repository.device-selection.model-select.model-select.title": "Xxxxx",
+  "console.views.device-add.repository.device-selection.model-select.model-select.warning": "Xxx xxxxxx xxxxxx xxxxxxxxxxx",
+  "console.views.device-add.repository.device-selection.model-select.model-select.noOptionsMessage": "Xx xxxxxxxx xxxxx xxxxx",
+  "console.views.device-add.repository.hints.other-hint.hintTitle": "Xxxx xxx xxxxxx xxxx xx xxxxx xxxx!",
+  "console.views.device-add.repository.hints.other-hint.hintMessage": "Xx'xx xxxxx, xxx xxxx xxxxxx xx xxx xxx xxxx xx Xxx Xxxxxx Xxxxxx Xxxxxxxxxx. Xxx xxx xxx xXxxxxxXxxxxxxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx, xxxxx xxx xxxxxxxxxxx xxxx xxx xxxxxx xxxxxxxxxxxx xxxxxxxx x.x. xx xxx xxxxxxx'x xxxx xxxxx. Xxxxxx xxxx xxxxx xx xxxx xxxxxxxxxxxxx xx xXxxxxXxxxxXxxxxx Xxxxxxxx/XxxxxXxxxx.",
+  "console.views.device-add.repository.hints.progress-hint.hintMessage": "Xxxxxx xxxx xxxx xxxxx xxx xxxxxx? xXxxxxxxXxxxxXxx xxxx xxxxx/XxxxxxxXxxxx xxx xXxxxxxXxxxxxxx xxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx.",
+  "console.views.device-add.repository.hints.progress-hint.hintNoSupportMessage": "Xxxxxx xxxx xxxx xxxxx xxx xxxxxx? Xxx xXxxxxxXxxxxxxx xxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx.",
+  "console.views.device-add.repository.repository.selectDeviceTitle": "x. Xxxxxx xxx xxx xxxxxx",
+  "console.views.device-add.repository.repository.enterDataTitle": "x. Xxxxx xxxxxxxxxxxx xxxx",
+  "console.views.device-add.repository.repository.enterDataDescription": "Xxxxxx xxxxxx xx xxx xxxxxx xxxxx xx xxxxxxx xxxx xxxxxxxx xxxxxxxxxxxx xxxx",
+  "console.views.device-add.repository.repository.register": "Xxxxxxxx xxx xxxxxx",
   "console.views.device-claim-authentication-code.index.deleteCode": "Xxxxxx xxxxx xxxxxxxxxxxxxx xxxx",
   "console.views.device-claim-authentication-code.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxx xxxxx xxxxxxxxxxxxxx xxxx?",
   "console.views.device-claim-authentication-code.index.noCodeSet": "Xxxxx xx xxxxxxxxx xx xxxxx xxxxxxxxxxxxxx xxxx xxx",
