--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -353,13 +353,20 @@
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.editWebhook": "Edit webhook",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.updateSuccess": "Webhook updated",
   "console.views.application-integrations-webhook-edit.application-integrations-webhook-edit.deleteSuccess": "Webhook deleted",
-  "console.views.device-add.configuration-form.index.activationModeWarning": "Activation mode selection unavailable",
-  "console.views.device-add.configuration-form.index.nsActivationModeWarning": "ABP and multicast activation mode selection unavailable",
-  "console.views.device-add.configuration-form.index.jsActivationModeWarning": "OTAA mode selection unavailable",
-  "console.views.device-add.configuration-form.index.activationModeNone": "Do not configure activation",
-  "console.views.device-add.configuration-form.index.start": "Start",
-  "console.views.device-add.configuration-form.index.preparation": "Preparation",
-  "console.views.device-add.device-add.title": "Add new end device",
+  "console.views.device-add.device-add.title": "Register end device",
+  "console.views.device-add.manual.configuration-form.index.activationModeWarning": "Activation mode selection unavailable",
+  "console.views.device-add.manual.configuration-form.index.nsActivationModeWarning": "ABP and multicast activation mode selection unavailable",
+  "console.views.device-add.manual.configuration-form.index.jsActivationModeWarning": "OTAA mode selection unavailable",
+  "console.views.device-add.manual.configuration-form.index.activationModeNone": "Do not configure activation",
+  "console.views.device-add.manual.configuration-form.index.start": "Start",
+  "console.views.device-add.manual.configuration-form.index.preparation": "Preparation",
+  "console.views.device-add.manual.manual.register": "Register manually",
+  "console.views.device-add.manual.wizard.prompt.index.modalTitle": "Confirm navigation",
+  "console.views.device-add.manual.wizard.prompt.index.modalMessage": "Are you sure you want to leave this page and abort the end device creation? There are unsaved changes that will be lost.",
+  "console.views.device-add.manual.wizard.prompt.index.modalApproveText": "Confirm navigation",
+  "console.views.device-add.manual.wizard.prompt.index.modalCancelText": "Stay on this page",
+  "console.views.device-add.messages.repositoryTabTitle": "From The Things Device Repository",
+  "console.views.device-add.messages.manualTabTitle": "Manually",
   "console.views.device-add.messages.basicTitle": "Basic settings",
   "console.views.device-add.messages.basicDescription": "End device ID's, Name and Description",
   "console.views.device-add.messages.basicDetails": "Defines general settings of an end device",
@@ -369,10 +376,27 @@
   "console.views.device-add.messages.appDescription": "Application session key to encrypt/decrypt LoRaWAN payload.",
   "console.views.device-add.messages.joinTitle": "Join settings",
   "console.views.device-add.messages.joinDescription": "Root keys, NetID and kek labels.",
-  "console.views.device-add.wizard.prompt.index.modalTitle": "Confirm navigation",
-  "console.views.device-add.wizard.prompt.index.modalMessage": "Are you sure you want to leave this page and abort the end device creation? There are unsaved changes that will be lost.",
-  "console.views.device-add.wizard.prompt.index.modalApproveText": "Confirm navigation",
-  "console.views.device-add.wizard.prompt.index.modalCancelText": "Stay on this page",
+  "console.views.device-add.messages.otherOption": "Other…",
+  "console.views.device-add.messages.typeToSearch": "Type to search…",
+  "console.views.device-add.messages.unknownHwOption": "Unknown ver.",
+  "console.views.device-add.repository.device-registration.index.fetching": "Fetching template…",
+  "console.views.device-add.repository.device-selection.band-select.band-select.title": "Profile (Region)",
+  "console.views.device-add.repository.device-selection.brand-select.brand-select.title": "Brand",
+  "console.views.device-add.repository.device-selection.brand-select.brand-select.warning": "End device models unavailable",
+  "console.views.device-add.repository.device-selection.brand-select.brand-select.noOptionsMessage": "No matching brand found",
+  "console.views.device-add.repository.device-selection.fw-version-select.fw-version-select.title": "Firmware Ver.",
+  "console.views.device-add.repository.device-selection.hw-version-select.hw-version-select.title": "Hardware Ver.",
+  "console.views.device-add.repository.device-selection.model-select.model-select.title": "Model",
+  "console.views.device-add.repository.device-selection.model-select.model-select.warning": "End device models unavailable",
+  "console.views.device-add.repository.device-selection.model-select.model-select.noOptionsMessage": "No matching model found",
+  "console.views.device-add.repository.hints.other-hint.hintTitle": "Your end device will be added soon!",
+  "console.views.device-add.repository.hints.other-hint.hintMessage": "We're sorry, but your device is not yet part of The Things Device Repository. You can use <ManualLink>manual device registration</ManualLink>, using the information your end device manufacturer provided e.g. in the product's data sheet. Please also refer to hour documentation on <GuideLink>Adding Devices</GuideLink>.",
+  "console.views.device-add.repository.hints.progress-hint.hintMessage": "Cannot find your exact end device? <SupportLink>Get help here</SupportLink> and <ManualLink>try manual device registration</ManualLink>.",
+  "console.views.device-add.repository.hints.progress-hint.hintNoSupportMessage": "Cannot find your exact end device? Try <ManualLink>try manual device registration</ManualLink>.",
+  "console.views.device-add.repository.repository.selectDeviceTitle": "1. Select the end device",
+  "console.views.device-add.repository.repository.enterDataTitle": "2. Enter registration data",
+  "console.views.device-add.repository.repository.enterDataDescription": "Please choose an end device first to proceed with entering registration data",
+  "console.views.device-add.repository.repository.register": "Register end device",
   "console.views.device-claim-authentication-code.index.deleteCode": "Delete claim authentication code",
   "console.views.device-claim-authentication-code.index.deleteWarning": "Are you sure you want to delete this claim authentication code?",
   "console.views.device-claim-authentication-code.index.noCodeSet": "There is currently no claim authentication code set",
