dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -31,6 +31,10 @@
   "account.views.login.index.forgotPassword": "Forgot password?",
   "account.views.login.index.loginToContinue": "Please login to continue",
   "account.views.login.index.loginFailed": "Login failed",
+  "account.views.overview.index.accountAppInfoTitle": "Welcome, {userId}! 👋",
+  "account.views.overview.index.accountAppInfoMessage": "<p>You have successfully logged into the Account App. The Account App is the official user account management application of The Things Stack. In the near future, you will be able to use this application to</p>\n<ul><li>Manage your user profile settings</li><li>Manage your active sessions</li><li>Manage your OAuth authorizations</li></ul>",
+  "account.views.overview.index.accountAppConsoleInfo": "If you wish to manage your applications, end devices and/or gateways, you can use the button below to head over to the Console.",
+  "account.views.overview.index.goToConsole": "Go to the Console",
   "account.views.update-password.index.updatePassword": "Update password",
   "account.views.update-password.index.newPassword": "New password",
   "account.views.update-password.index.oldPassword": "Old password",
