--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -31,6 +31,10 @@
   "account.views.login.index.forgotPassword": "Xxxxxx xxxxxxxx?",
   "account.views.login.index.loginToContinue": "Xxxxxx xxxxx xx xxxxxxxx",
   "account.views.login.index.loginFailed": "Xxxxx xxxxxx",
+  "account.views.overview.index.accountAppInfoTitle": "Xxxxxxx, {userId}! xx",
+  "account.views.overview.index.accountAppInfoMessage": "xxxXxx xxxx xxxxxxxxxxxx xxxxxx xxxx xxx Xxxxxxx Xxx. Xxx Xxxxxxx Xxx xx xxx xxxxxxxx xxxx xxxxxxx xxxxxxxxxx xxxxxxxxxxx xx Xxx Xxxxxx Xxxxx. Xx xxx xxxx xxxxxx, xxx xxxx xx xxxx xx xxx xxxx xxxxxxxxxxx xxx/xx\nxxxxxxxxXxxxxx xxxx xxxx xxxxxxx xxxxxxxxx/xxxxxxxXxxxxx xxxx xxxxxx xxxxxxxxx/xxxxxxxXxxxxx xxxx XXxxx xxxxxxxxxxxxxxx/xxxx/xxx",
+  "account.views.overview.index.accountAppConsoleInfo": "Xx xxx xxxx xx xxxxxx xxxx xxxxxxxxxxxx, xxx xxxxxxx xxx/xx xxxxxxxx, xxx xxx xxx xxx xxxxxx xxxxx xx xxxx xxxx xx xxx Xxxxxxx.",
+  "account.views.overview.index.goToConsole": "Xx xx xxx Xxxxxxx",
   "account.views.update-password.index.updatePassword": "Xxxxxx xxxxxxxx",
   "account.views.update-password.index.newPassword": "Xxx xxxxxxxx",
   "account.views.update-password.index.oldPassword": "Xxx xxxxxxxx",
