dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -4,9 +4,25 @@
   "account.containers.change-password-form.index.newPasswordConfirm": "Confirm new password",
   "account.containers.change-password-form.index.revokeAllAccess": "Revoke all access",
   "account.containers.change-password-form.index.revokeAllAccessDescription": "Check this option if you also wish to revoke all your currently active sessions",
-  "account.containers.change-password-form.index.success": "Password updated",
-  "account.containers.change-password-form.index.successMessage": "Your password was updated successfully",
-  "account.containers.change-password-form.index.updatePassword": "Update password",
+  "account.containers.profile-card.index.editProfileSettings": "Edit profile settings",
+  "account.containers.profile-settings-form.messages.imageProvided": "Image has been provided",
+  "account.containers.profile-settings-form.messages.profilePicture": "Profile picture",
+  "account.containers.profile-settings-form.messages.successMessage": "Profile updated",
+  "account.containers.profile-settings-form.messages.deleteAccount": "Delete account",
+  "account.containers.profile-settings-form.messages.modalWarning": "Are you sure you want to delete your account? This action cannot be undone and your user name cannot be registered again! After your account is deleted, you will be logged out and all other active sessions will be terminated.",
+  "account.containers.profile-settings-form.messages.useGravatar": "Use Gravatar",
+  "account.containers.profile-settings-form.messages.uploadAnImage": "Upload an image",
+  "account.containers.profile-settings-form.messages.gravatarInfo": "If available, we're using the <link>Gravatar</link> image associated with your email address. You can upload a different profile picture by selecting the option above.",
+  "account.containers.profile-settings-form.messages.gravatarInfoGravatarOnly": "If available, we're using the <link>Gravatar</link> image associated with your email address. Please follow the instructions on the Gravatar website to change your profile picture.",
+  "account.containers.profile-settings-form.messages.primaryEmailAddressDescription": "Primary email address associated with your account",
+  "account.containers.profile-settings-form.messages.deleteAccountError": "There was an error and your account could not be deleted",
+  "account.containers.profile-settings-form.messages.deleteAccountSuccess": "Account deleted",
+  "account.containers.profile-settings-form.messages.imageRequired": "Please select a file to use as your profile picture or choose \"Gravatar\" as source",
+  "account.containers.profile-settings-form.messages.imageUpload": "Image upload",
+  "account.containers.profile-settings-form.messages.chooseImage": "Choose image…",
+  "account.containers.profile-settings-form.messages.changeImage": "Change image…",
+  "account.containers.profile-settings-form.messages.gravatarImage": "Gravatar image",
+  "account.containers.profile-settings-form.messages.profilePictureDisabled": "Setting a profile picture is currently disabled. Hence, only an administrator can change the profile picture.",
   "account.views.authorize.index.modalTitle": "Request for permission",
   "account.views.authorize.index.modalSubtitle": "{clientName} is requesting to be granted the following rights:",
   "account.views.authorize.index.loginInfo": "You are logged in as {userId}.",
@@ -31,17 +47,15 @@
   "account.views.login.index.forgotPassword": "Forgot password?",
   "account.views.login.index.loginToContinue": "Please login to continue",
   "account.views.login.index.loginFailed": "Login failed",
+  "account.views.login.index.accountDeleted": "Account deleted",
   "account.views.overview.index.accountAppInfoTitle": "Welcome, {userId}! 👋",
-  "account.views.overview.index.accountAppInfoMessage": "<p>You have successfully logged into the Account App. The Account App is the official user account management application of The Things Stack. In the near future, you will be able to use this application to</p>\n<ul><li>Manage your user profile settings</li><li>Manage your active sessions</li><li>Manage your OAuth authorizations</li></ul>",
+  "account.views.overview.index.accountAppInfoMessage": "<p>You have successfully logged into the Account App. The Account App is the official user account management application of The Things Stack. In the near future, you will additionally be able to use this application to</p>\n<ul><li>Manage your active sessions</li><li>Manage your OAuth authorizations</li></ul>",
   "account.views.overview.index.accountAppConsoleInfo": "If you wish to manage your applications, end devices and/or gateways, you can use the button below to head over to the Console.",
   "account.views.overview.index.goToConsole": "Go to the Console",
-  "account.views.update-password.index.updatePassword": "Update password",
-  "account.views.update-password.index.newPassword": "New password",
-  "account.views.update-password.index.oldPassword": "Old password",
-  "account.views.update-password.index.passwordChanged": "Password changed",
-  "account.views.update-password.index.revokeAccess": "Revoke access",
-  "account.views.update-password.index.logoutAllDevices": "Sign out from all devices",
-  "account.views.update-password.index.revokeWarning": "This will revoke access from all signed in devices",
+  "account.views.profile-settings.index.profileEdit": "Edit profile",
+  "account.views.profile-settings.index.generalSettingsDescription": "Change basic info such as your name, profile picture or email address.",
+  "account.views.profile-settings.index.changePasswordTitle": "Change password",
+  "account.views.profile-settings.index.changePasswordDescription": "Set up a new password for your account.",
   "account.views.update-password.index.sessionRevoked": "Your password was changed and all active sessions were revoked",
   "account.views.validate.index.backToAccount": "Back to Account",
   "account.views.validate.index.contactInfoValidation": "Contact info validation",
@@ -750,6 +764,7 @@
   "lib.shared-messages.otherCluster": "Other cluster",
   "lib.shared-messages.overview": "Overview",
   "lib.shared-messages.password": "Password",
+  "lib.shared-messages.passwordChanged": "Password changed",
   "lib.shared-messages.pause": "Pause",
   "lib.shared-messages.payload": "Payload",
   "lib.shared-messages.payloadFormatters": "Payload formatters",
@@ -762,6 +777,7 @@
   "lib.shared-messages.phyVersionDescription": "The Regional Parameters version (PHY), as provided by the device manufacturer",
   "lib.shared-messages.port": "Port",
   "lib.shared-messages.privacyPolicy": "Privacy policy",
+  "lib.shared-messages.profileSettings": "Profile settings",
   "lib.shared-messages.provider": "Provider",
   "lib.shared-messages.provisionedOnExternalJoinServer": "Provisioned on external Join Server",
   "lib.shared-messages.public": "Public",
@@ -833,7 +849,7 @@
   "lib.shared-messages.validateApiKey": "API keys must follow the format \"NNSXS.[…].[…]\"",
   "lib.shared-messages.validateDelayFormat": "{field} must be a positive, whole number",
   "lib.shared-messages.validateDigit": "{field} must have at least {digit} {digit, plural, one {digit} other {digits}}",
-  "lib.shared-messages.validateEmail": "An email address must use exactly one \"@\" and use no special characters",
+  "lib.shared-messages.validateEmail": "An email address must use exactly one \"@\", one \".\" and use no special characters",
   "lib.shared-messages.validateFreqNumberic": "All frequency values must be positive integers",
   "lib.shared-messages.validateFreqRequired": "All frequency values are required. Please remove empty entries.",
   "lib.shared-messages.validateHexLength": "{field} must be a complete hex value",
