--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -4,9 +4,25 @@
   "account.containers.change-password-form.index.newPasswordConfirm": "Xxxxxxx xxx xxxxxxxx",
   "account.containers.change-password-form.index.revokeAllAccess": "Xxxxxx xxx xxxxxx",
   "account.containers.change-password-form.index.revokeAllAccessDescription": "Xxxxx xxxx xxxxxx xx xxx xxxx xxxx xx xxxxxx xxx xxxx xxxxxxxxx xxxxxx xxxxxxxx",
-  "account.containers.change-password-form.index.success": "Xxxxxxxx xxxxxxx",
-  "account.containers.change-password-form.index.successMessage": "Xxxx xxxxxxxx xxx xxxxxxx xxxxxxxxxxxx",
-  "account.containers.change-password-form.index.updatePassword": "Xxxxxx xxxxxxxx",
+  "account.containers.profile-card.index.editProfileSettings": "Xxxx xxxxxxx xxxxxxxx",
+  "account.containers.profile-settings-form.messages.imageProvided": "Xxxxx xxx xxxx xxxxxxxx",
+  "account.containers.profile-settings-form.messages.profilePicture": "Xxxxxxx xxxxxxx",
+  "account.containers.profile-settings-form.messages.successMessage": "Xxxxxxx xxxxxxx",
+  "account.containers.profile-settings-form.messages.deleteAccount": "Xxxxxx xxxxxxx",
+  "account.containers.profile-settings-form.messages.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxx xxxxxxx? Xxxx xxxxxx xxxxxx xx xxxxxx xxx xxxx xxxx xxxx xxxxxx xx xxxxxxxxxx xxxxx! Xxxxx xxxx xxxxxxx xx xxxxxxx, xxx xxxx xx xxxxxx xxx xxx xxx xxxxx xxxxxx xxxxxxxx xxxx xx xxxxxxxxxx.",
+  "account.containers.profile-settings-form.messages.useGravatar": "Xxx Xxxxxxxx",
+  "account.containers.profile-settings-form.messages.uploadAnImage": "Xxxxxx xx xxxxx",
+  "account.containers.profile-settings-form.messages.gravatarInfo": "Xx xxxxxxxxx, xx'xx xxxxx xxx xxxxxxXxxxxxxxx/xxxxx xxxxx xxxxxxxxxx xxxx xxxx xxxxx xxxxxxx. Xxx xxx xxxxxx x xxxxxxxxx xxxxxxx xxxxxxx xx xxxxxxxxx xxx xxxxxx xxxxx.",
+  "account.containers.profile-settings-form.messages.gravatarInfoGravatarOnly": "Xx xxxxxxxxx, xx'xx xxxxx xxx xxxxxxXxxxxxxxx/xxxxx xxxxx xxxxxxxxxx xxxx xxxx xxxxx xxxxxxx. Xxxxxx xxxxxx xxx xxxxxxxxxxxx xx xxx Xxxxxxxx xxxxxxx xx xxxxxx xxxx xxxxxxx xxxxxxx.",
+  "account.containers.profile-settings-form.messages.primaryEmailAddressDescription": "Xxxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxx xxxxxxx",
+  "account.containers.profile-settings-form.messages.deleteAccountError": "Xxxxx xxx xx xxxxx xxx xxxx xxxxxxx xxxxx xxx xx xxxxxxx",
+  "account.containers.profile-settings-form.messages.deleteAccountSuccess": "Xxxxxxx xxxxxxx",
+  "account.containers.profile-settings-form.messages.imageRequired": "Xxxxxx xxxxxx x xxxx xx xxx xx xxxx xxxxxxx xxxxxxx xx xxxxxx \"Xxxxxxxx\" xx xxxxxx",
+  "account.containers.profile-settings-form.messages.imageUpload": "Xxxxx xxxxxx",
+  "account.containers.profile-settings-form.messages.chooseImage": "Xxxxxx xxxxxx",
+  "account.containers.profile-settings-form.messages.changeImage": "Xxxxxx xxxxxx",
+  "account.containers.profile-settings-form.messages.gravatarImage": "Xxxxxxxx xxxxx",
+  "account.containers.profile-settings-form.messages.profilePictureDisabled": "Xxxxxxx x xxxxxxx xxxxxxx xx xxxxxxxxx xxxxxxxx. Xxxxx, xxxx xx xxxxxxxxxxxxx xxx xxxxxx xxx xxxxxxx xxxxxxx.",
   "account.views.authorize.index.modalTitle": "Xxxxxxx xxx xxxxxxxxxx",
   "account.views.authorize.index.modalSubtitle": "{clientName} xx xxxxxxxxxx xx xx xxxxxxx xxx xxxxxxxxx xxxxxx:",
   "account.views.authorize.index.loginInfo": "Xxx xxx xxxxxx xx xx {userId}.",
@@ -31,17 +47,15 @@
   "account.views.login.index.forgotPassword": "Xxxxxx xxxxxxxx?",
   "account.views.login.index.loginToContinue": "Xxxxxx xxxxx xx xxxxxxxx",
   "account.views.login.index.loginFailed": "Xxxxx xxxxxx",
+  "account.views.login.index.accountDeleted": "Xxxxxxx xxxxxxx",
   "account.views.overview.index.accountAppInfoTitle": "Xxxxxxx, {userId}! xx",
-  "account.views.overview.index.accountAppInfoMessage": "xxxXxx xxxx xxxxxxxxxxxx xxxxxx xxxx xxx Xxxxxxx Xxx. Xxx Xxxxxxx Xxx xx xxx xxxxxxxx xxxx xxxxxxx xxxxxxxxxx xxxxxxxxxxx xx Xxx Xxxxxx Xxxxx. Xx xxx xxxx xxxxxx, xxx xxxx xx xxxx xx xxx xxxx xxxxxxxxxxx xxx/xx\nxxxxxxxxXxxxxx xxxx xxxx xxxxxxx xxxxxxxxx/xxxxxxxXxxxxx xxxx xxxxxx xxxxxxxxx/xxxxxxxXxxxxx xxxx XXxxx xxxxxxxxxxxxxxx/xxxx/xxx",
+  "account.views.overview.index.accountAppInfoMessage": "xxxXxx xxxx xxxxxxxxxxxx xxxxxx xxxx xxx Xxxxxxx Xxx. Xxx Xxxxxxx Xxx xx xxx xxxxxxxx xxxx xxxxxxx xxxxxxxxxx xxxxxxxxxxx xx Xxx Xxxxxx Xxxxx. Xx xxx xxxx xxxxxx, xxx xxxx xxxxxxxxxxxx xx xxxx xx xxx xxxx xxxxxxxxxxx xxx/xx\nxxxxxxxxXxxxxx xxxx xxxxxx xxxxxxxxx/xxxxxxxXxxxxx xxxx XXxxx xxxxxxxxxxxxxxx/xxxx/xxx",
   "account.views.overview.index.accountAppConsoleInfo": "Xx xxx xxxx xx xxxxxx xxxx xxxxxxxxxxxx, xxx xxxxxxx xxx/xx xxxxxxxx, xxx xxx xxx xxx xxxxxx xxxxx xx xxxx xxxx xx xxx Xxxxxxx.",
   "account.views.overview.index.goToConsole": "Xx xx xxx Xxxxxxx",
-  "account.views.update-password.index.updatePassword": "Xxxxxx xxxxxxxx",
-  "account.views.update-password.index.newPassword": "Xxx xxxxxxxx",
-  "account.views.update-password.index.oldPassword": "Xxx xxxxxxxx",
-  "account.views.update-password.index.passwordChanged": "Xxxxxxxx xxxxxxx",
-  "account.views.update-password.index.revokeAccess": "Xxxxxx xxxxxx",
-  "account.views.update-password.index.logoutAllDevices": "Xxxx xxx xxxx xxx xxxxxxx",
-  "account.views.update-password.index.revokeWarning": "Xxxx xxxx xxxxxx xxxxxx xxxx xxx xxxxxx xx xxxxxxx",
+  "account.views.profile-settings.index.profileEdit": "Xxxx xxxxxxx",
+  "account.views.profile-settings.index.generalSettingsDescription": "Xxxxxx xxxxx xxxx xxxx xx xxxx xxxx, xxxxxxx xxxxxxx xx xxxxx xxxxxxx.",
+  "account.views.profile-settings.index.changePasswordTitle": "Xxxxxx xxxxxxxx",
+  "account.views.profile-settings.index.changePasswordDescription": "Xxx xx x xxx xxxxxxxx xxx xxxx xxxxxxx.",
   "account.views.update-password.index.sessionRevoked": "Xxxx xxxxxxxx xxx xxxxxxx xxx xxx xxxxxx xxxxxxxx xxxx xxxxxxx",
   "account.views.validate.index.backToAccount": "Xxxx xx Xxxxxxx",
   "account.views.validate.index.contactInfoValidation": "Xxxxxxx xxxx xxxxxxxxxx",
@@ -750,6 +764,7 @@
   "lib.shared-messages.otherCluster": "Xxxxx xxxxxxx",
   "lib.shared-messages.overview": "Xxxxxxxx",
   "lib.shared-messages.password": "Xxxxxxxx",
+  "lib.shared-messages.passwordChanged": "Xxxxxxxx xxxxxxx",
   "lib.shared-messages.pause": "Xxxxx",
   "lib.shared-messages.payload": "Xxxxxxx",
   "lib.shared-messages.payloadFormatters": "Xxxxxxx xxxxxxxxxx",
@@ -762,6 +777,7 @@
   "lib.shared-messages.phyVersionDescription": "Xxx Xxxxxxxx Xxxxxxxxxx xxxxxxx (XXX), xx xxxxxxxx xx xxx xxxxxx xxxxxxxxxxxx",
   "lib.shared-messages.port": "Xxxx",
   "lib.shared-messages.privacyPolicy": "Xxxxxxx xxxxxx",
+  "lib.shared-messages.profileSettings": "Xxxxxxx xxxxxxxx",
   "lib.shared-messages.provider": "Xxxxxxxx",
   "lib.shared-messages.provisionedOnExternalJoinServer": "Xxxxxxxxxxx xx xxxxxxxx Xxxx Xxxxxx",
   "lib.shared-messages.public": "Xxxxxx",
@@ -833,7 +849,7 @@
   "lib.shared-messages.validateApiKey": "XXX xxxx xxxx xxxxxx xxx xxxxxx \"XXXXX.[x].[x]\"",
   "lib.shared-messages.validateDelayFormat": "{field} xxxx xx x xxxxxxxx, xxxxx xxxxxx",
   "lib.shared-messages.validateDigit": "{field} xxxx xxxx xx xxxxx {digit} {digit, plural, =one {xxxxx} other {xxxxxx}}",
-  "lib.shared-messages.validateEmail": "Xx xxxxx xxxxxxx xxxx xxx xxxxxxx xxx \"@\" xxx xxx xx xxxxxxx xxxxxxxxxx",
+  "lib.shared-messages.validateEmail": "Xx xxxxx xxxxxxx xxxx xxx xxxxxxx xxx \"@\", xxx \".\" xxx xxx xx xxxxxxx xxxxxxxxxx",
   "lib.shared-messages.validateFreqNumberic": "Xxx xxxxxxxxx xxxxxx xxxx xx xxxxxxxx xxxxxxxx",
   "lib.shared-messages.validateFreqRequired": "Xxx xxxxxxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
   "lib.shared-messages.validateHexLength": "{field} xxxx xx x xxxxxxxx xxx xxxxx",
