console: Show device card after device selection

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -379,6 +379,11 @@
   "console.views.device-add.messages.otherOption": "Other…",
   "console.views.device-add.messages.typeToSearch": "Type to search…",
   "console.views.device-add.messages.unknownHwOption": "Unknown ver.",
+  "console.views.device-add.repository.device-card.device-card.productWebsite": "Product website",
+  "console.views.device-add.repository.device-card.device-card.dataSheet": "Data sheet",
+  "console.views.device-add.repository.device-card.device-card.classA": "Class A",
+  "console.views.device-add.repository.device-card.device-card.classB": "Class B",
+  "console.views.device-add.repository.device-card.device-card.classC": "Class C",
   "console.views.device-add.repository.device-registration.index.fetching": "Fetching template…",
   "console.views.device-add.repository.device-selection.band-select.band-select.title": "Profile (Region)",
   "console.views.device-add.repository.device-selection.brand-select.brand-select.title": "Brand",
