--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -379,6 +379,11 @@
   "console.views.device-add.messages.otherOption": "Xxxxxx",
   "console.views.device-add.messages.typeToSearch": "Xxxx xx xxxxxxx",
   "console.views.device-add.messages.unknownHwOption": "Xxxxxxx xxx.",
+  "console.views.device-add.repository.device-card.device-card.productWebsite": "Xxxxxxx xxxxxxx",
+  "console.views.device-add.repository.device-card.device-card.dataSheet": "Xxxx xxxxx",
+  "console.views.device-add.repository.device-card.device-card.classA": "Xxxxx X",
+  "console.views.device-add.repository.device-card.device-card.classB": "Xxxxx X",
+  "console.views.device-add.repository.device-card.device-card.classC": "Xxxxx X",
   "console.views.device-add.repository.device-registration.index.fetching": "Xxxxxxxx xxxxxxxxx",
   "console.views.device-add.repository.device-selection.band-select.band-select.title": "Xxxxxxx (Xxxxxx)",
   "console.views.device-add.repository.device-selection.brand-select.brand-select.title": "Xxxxx",
