dev: Update locales

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -365,7 +365,7 @@
   "console.views.device-add.manual.wizard.prompt.index.modalMessage": "Xxx xxx xxxx xxx xxxx xx xxxxx xxxx xxxx xxx xxxxx xxx xxx xxxxxx xxxxxxxx? Xxxxx xxx xxxxxxx xxxxxxx xxxx xxxx xx xxxx.",
   "console.views.device-add.manual.wizard.prompt.index.modalApproveText": "Xxxxxxx xxxxxxxxxx",
   "console.views.device-add.manual.wizard.prompt.index.modalCancelText": "Xxxx xx xxxx xxxx",
-  "console.views.device-add.messages.repositoryTabTitle": "Xxxx Xxx Xxxxxx Xxxxxx Xxxxxxxxxx",
+  "console.views.device-add.messages.repositoryTabTitle": "Xxxx Xxx XxXxXXX Xxxxxx Xxxxxxxxxx",
   "console.views.device-add.messages.manualTabTitle": "Xxxxxxxx",
   "console.views.device-add.messages.basicTitle": "Xxxxx xxxxxxxx",
   "console.views.device-add.messages.basicDescription": "Xxx xxxxxx XX'x, Xxxx xxx Xxxxxxxxxxx",
@@ -385,6 +385,9 @@
   "console.views.device-add.repository.device-card.device-card.classB": "Xxxxx X",
   "console.views.device-add.repository.device-card.device-card.classC": "Xxxxx X",
   "console.views.device-add.repository.device-registration.index.fetching": "Xxxxxxxx xxxxxxxxx",
+  "console.views.device-add.repository.device-registration.index.afterRegistration": "Xxxxx xxxxxxxxxxxx",
+  "console.views.device-add.repository.device-registration.index.singleRegistration": "Xxxx xxxxxxxxxx xxx xxxxxx",
+  "console.views.device-add.repository.device-registration.index.multipleRegistration": "Xxxxxxxx xxxxxxx xxx xxxxxx xx xxxx xxxx",
   "console.views.device-add.repository.device-selection.band-select.band-select.title": "Xxxxxxx (Xxxxxx)",
   "console.views.device-add.repository.device-selection.brand-select.brand-select.title": "Xxxxx",
   "console.views.device-add.repository.device-selection.brand-select.brand-select.warning": "Xxx xxxxxx xxxxxx xxxxxxxxxxx",
@@ -395,13 +398,15 @@
   "console.views.device-add.repository.device-selection.model-select.model-select.warning": "Xxx xxxxxx xxxxxx xxxxxxxxxxx",
   "console.views.device-add.repository.device-selection.model-select.model-select.noOptionsMessage": "Xx xxxxxxxx xxxxx xxxxx",
   "console.views.device-add.repository.hints.other-hint.hintTitle": "Xxxx xxx xxxxxx xxxx xx xxxxx xxxx!",
-  "console.views.device-add.repository.hints.other-hint.hintMessage": "Xx'xx xxxxx, xxx xxxx xxxxxx xx xxx xxx xxxx xx Xxx Xxxxxx Xxxxxx Xxxxxxxxxx. Xxx xxx xxx xXxxxxxXxxxxxxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx, xxxxx xxx xxxxxxxxxxx xxxx xxx xxxxxx xxxxxxxxxxxx xxxxxxxx x.x. xx xxx xxxxxxx'x xxxx xxxxx. Xxxxxx xxxx xxxxx xx xxxx xxxxxxxxxxxxx xx xXxxxxXxxxxXxxxxx Xxxxxxxx/XxxxxXxxxx.",
+  "console.views.device-add.repository.hints.other-hint.hintMessage": "Xx'xx xxxxx, xxx xxxx xxxxxx xx xxx xxx xxxx xx Xxx XxXxXXX Xxxxxx Xxxxxxxxxx. Xxx xxx xxx xXxxxxxXxxxxxxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx, xxxxx xxx xxxxxxxxxxx xxxx xxx xxxxxx xxxxxxxxxxxx xxxxxxxx x.x. xx xxx xxxxxxx'x xxxx xxxxx. Xxxxxx xxxx xxxxx xx xxx xxxxxxxxxxxxx xx xXxxxxXxxxxXxxxxx Xxxxxxxx/XxxxxXxxxx.",
   "console.views.device-add.repository.hints.progress-hint.hintMessage": "Xxxxxx xxxx xxxx xxxxx xxx xxxxxx? xXxxxxxxXxxxxXxx xxxx xxxxx/XxxxxxxXxxxx xxx xXxxxxxXxxxxxxx xxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx.",
-  "console.views.device-add.repository.hints.progress-hint.hintNoSupportMessage": "Xxxxxx xxxx xxxx xxxxx xxx xxxxxx? Xxx xXxxxxxXxxxxxxx xxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx.",
+  "console.views.device-add.repository.hints.progress-hint.hintNoSupportMessage": "Xxxxxx xxxx xxxx xxxxx xxx xxxxxx? xXxxxxxXxxxxXxx xxxxxx xxxxxx xxxxxxxxxxxxx/XxxxxxXxxxx.",
   "console.views.device-add.repository.repository.selectDeviceTitle": "x. Xxxxxx xxx xxx xxxxxx",
   "console.views.device-add.repository.repository.enterDataTitle": "x. Xxxxx xxxxxxxxxxxx xxxx",
   "console.views.device-add.repository.repository.enterDataDescription": "Xxxxxx xxxxxx xx xxx xxxxxx xxxxx xx xxxxxxx xxxx xxxxxxxx xxxxxxxxxxxx xxxx",
-  "console.views.device-add.repository.repository.register": "Xxxxxxxx xxx xxxxxx",
+  "console.views.device-add.repository.repository.submitTitle": "Xxxxxxxx xxx xxxxxx",
+  "console.views.device-add.repository.repository.createSuccess": "Xxx xxxxxx xxxxxxxxxx",
+  "console.views.device-add.repository.repository.register": "Xxxxxxxx xxxx Xxx XxXxXXX Xxxxxx Xxxxxxxxxx",
   "console.views.device-claim-authentication-code.index.deleteCode": "Xxxxxx xxxxx xxxxxxxxxxxxxx xxxx",
   "console.views.device-claim-authentication-code.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxxx xxxxx xxxxxxxxxxxxxx xxxx?",
   "console.views.device-claim-authentication-code.index.noCodeSet": "Xxxxx xx xxxxxxxxx xx xxxxx xxxxxxxxxxxxxx xxxx xxx",
