--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -365,7 +365,7 @@
   "console.views.device-add.manual.wizard.prompt.index.modalMessage": "Are you sure you want to leave this page and abort the end device creation? There are unsaved changes that will be lost.",
   "console.views.device-add.manual.wizard.prompt.index.modalApproveText": "Confirm navigation",
   "console.views.device-add.manual.wizard.prompt.index.modalCancelText": "Stay on this page",
-  "console.views.device-add.messages.repositoryTabTitle": "From The Things Device Repository",
+  "console.views.device-add.messages.repositoryTabTitle": "From The LoRaWAN Device Repository",
   "console.views.device-add.messages.manualTabTitle": "Manually",
   "console.views.device-add.messages.basicTitle": "Basic settings",
   "console.views.device-add.messages.basicDescription": "End device ID's, Name and Description",
@@ -385,6 +385,9 @@
   "console.views.device-add.repository.device-card.device-card.classB": "Class B",
   "console.views.device-add.repository.device-card.device-card.classC": "Class C",
   "console.views.device-add.repository.device-registration.index.fetching": "Fetching template…",
+  "console.views.device-add.repository.device-registration.index.afterRegistration": "After registration",
+  "console.views.device-add.repository.device-registration.index.singleRegistration": "View registered end device",
+  "console.views.device-add.repository.device-registration.index.multipleRegistration": "Register another end device of this type",
   "console.views.device-add.repository.device-selection.band-select.band-select.title": "Profile (Region)",
   "console.views.device-add.repository.device-selection.brand-select.brand-select.title": "Brand",
   "console.views.device-add.repository.device-selection.brand-select.brand-select.warning": "End device models unavailable",
@@ -395,13 +398,15 @@
   "console.views.device-add.repository.device-selection.model-select.model-select.warning": "End device models unavailable",
   "console.views.device-add.repository.device-selection.model-select.model-select.noOptionsMessage": "No matching model found",
   "console.views.device-add.repository.hints.other-hint.hintTitle": "Your end device will be added soon!",
-  "console.views.device-add.repository.hints.other-hint.hintMessage": "We're sorry, but your device is not yet part of The Things Device Repository. You can use <ManualLink>manual device registration</ManualLink>, using the information your end device manufacturer provided e.g. in the product's data sheet. Please also refer to hour documentation on <GuideLink>Adding Devices</GuideLink>.",
+  "console.views.device-add.repository.hints.other-hint.hintMessage": "We're sorry, but your device is not yet part of The LoRaWAN Device Repository. You can use <ManualLink>manual device registration</ManualLink>, using the information your end device manufacturer provided e.g. in the product's data sheet. Please also refer to our documentation on <GuideLink>Adding Devices</GuideLink>.",
   "console.views.device-add.repository.hints.progress-hint.hintMessage": "Cannot find your exact end device? <SupportLink>Get help here</SupportLink> and <ManualLink>try manual device registration</ManualLink>.",
-  "console.views.device-add.repository.hints.progress-hint.hintNoSupportMessage": "Cannot find your exact end device? Try <ManualLink>try manual device registration</ManualLink>.",
+  "console.views.device-add.repository.hints.progress-hint.hintNoSupportMessage": "Cannot find your exact end device? <ManualLink>Try manual device registration</ManualLink>.",
   "console.views.device-add.repository.repository.selectDeviceTitle": "1. Select the end device",
   "console.views.device-add.repository.repository.enterDataTitle": "2. Enter registration data",
   "console.views.device-add.repository.repository.enterDataDescription": "Please choose an end device first to proceed with entering registration data",
-  "console.views.device-add.repository.repository.register": "Register end device",
+  "console.views.device-add.repository.repository.submitTitle": "Register end device",
+  "console.views.device-add.repository.repository.createSuccess": "End device registered",
+  "console.views.device-add.repository.repository.register": "Register from The LoRaWAN Device Repository",
   "console.views.device-claim-authentication-code.index.deleteCode": "Delete claim authentication code",
   "console.views.device-claim-authentication-code.index.deleteWarning": "Are you sure you want to delete this claim authentication code?",
   "console.views.device-claim-authentication-code.index.noCodeSet": "There is currently no claim authentication code set",
