console: Add checkbox to validate email address

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -234,13 +234,16 @@
   "console.components.uplink-form.uplink-form.simulateUplink": "Xxxxxxxx xxxxxx",
   "console.components.uplink-form.uplink-form.payloadDescription": "Xxx xxxxxxx xxxxxxx xxxxx xx xxx xxxxxx xxxxxxx",
   "console.components.uplink-form.uplink-form.uplinkSuccess": "Xxxxxx xxxx",
-  "console.components.user-data-form.index.adminLabel": "Xxxxxxxxxxxxx",
+  "console.components.user-data-form.index.adminRights": "Xxxxx xxxxxx",
+  "console.components.user-data-form.index.adminLabel": "Xxxxx xxxx xxxx xxxxx xxxxxx",
   "console.components.user-data-form.index.userDescPlaceholder": "Xxxxxxxxxxx xxx xx xxx xxxx",
   "console.components.user-data-form.index.userDescDescription": "Xxxxxxxx xxxx xxxxxxxxxxx; xxx xxxx xx xxxx xx xxxx xxxxx xxxxx xxx xxxx",
   "console.components.user-data-form.index.userIdPlaceholder": "xxxx-xxx",
   "console.components.user-data-form.index.userNamePlaceholder": "Xxxx Xxx",
   "console.components.user-data-form.index.emailPlaceholder": "xxxx@xxxxxxx.xxx",
   "console.components.user-data-form.index.emailAddressDescription": "Xxxxxxx xxxxx xxxxxxx xxxx xxx xxxxxxx xx; xxxx xxxxxxx xx xxx xxxxxxxx xxxxxxx",
+  "console.components.user-data-form.index.emailAddressValidation": "Xxxxx xxxxx xxxxxxx xx xxxxxxxxx",
+  "console.components.user-data-form.index.emailAddressValidationDescription": "Xxxxxx xxxx xxxxxx xx xxx xx xxx xxxx xxxx xxxx xx xxxxxxxx xxx xxxxx xxxxxxx",
   "console.components.user-data-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxx \"{userId}\". Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxx XX.",
   "console.components.webhook-form.index.idPlaceholder": "xx-xxx-xxxxxxx",
   "console.components.webhook-form.index.messageInfo": "Xxx xxxx xxxxxxx xxxxxxx xxxx, xx xxxxxxxx xxxx xxx xx xxxxxxx xxxxx xxxx xx xxxxxxxx xx xxx xxxx XXX",
