--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -234,13 +234,16 @@
   "console.components.uplink-form.uplink-form.simulateUplink": "Simulate uplink",
   "console.components.uplink-form.uplink-form.payloadDescription": "The desired payload bytes of the uplink message",
   "console.components.uplink-form.uplink-form.uplinkSuccess": "Uplink sent",
-  "console.components.user-data-form.index.adminLabel": "Administrator",
+  "console.components.user-data-form.index.adminRights": "Admin rights",
+  "console.components.user-data-form.index.adminLabel": "Grant this user admin status",
   "console.components.user-data-form.index.userDescPlaceholder": "Description for my new user",
   "console.components.user-data-form.index.userDescDescription": "Optional user description; can also be used to save notes about the user",
   "console.components.user-data-form.index.userIdPlaceholder": "jane-doe",
   "console.components.user-data-form.index.userNamePlaceholder": "Jane Doe",
   "console.components.user-data-form.index.emailPlaceholder": "mail@example.com",
   "console.components.user-data-form.index.emailAddressDescription": "Primary email address used for logging in; this address is not publicly visible",
+  "console.components.user-data-form.index.emailAddressValidation": "Treat email address as validated",
+  "console.components.user-data-form.index.emailAddressValidationDescription": "Enable this option if you do not need this user to validate the email address",
   "console.components.user-data-form.index.modalWarning": "Are you sure you want to delete the user \"{userId}\". This action cannot be undone and it will not be possible to reuse the user ID.",
   "console.components.webhook-form.index.idPlaceholder": "my-new-webhook",
   "console.components.webhook-form.index.messageInfo": "For each enabled message type, an optional path can be defined which will be appended to the base URL",
