console: Update LoRaCloud DAS form name

--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -296,14 +296,14 @@
   "console.containers.gateway-location-form.gateway-location-form.privacy": "Xxxxxxx",
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Xxxxxxx xxxxxxxx",
   "console.containers.gateways-table.index.ownedTabTitle": "Xxxxx xxxxxxxx",
-  "console.containers.lora-cloud-form.index.token": "Xxxxx",
-  "console.containers.lora-cloud-form.index.lr1110Encoding": "XXxxxx xxxx xxxxxxxx",
-  "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
-  "console.containers.lora-cloud-form.index.deleteToken": "Xxxxxx xxxxx",
-  "console.containers.lora-cloud-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxxxxx xxxxx? Xxxx xxxxxx xxxxxx xx xxxxxx.",
-  "console.containers.lora-cloud-form.index.tokenUpdated": "Xxxxx xxxxxxx",
-  "console.containers.lora-cloud-form.index.tokenDeleted": "Xxxxx xxxxxxx",
-  "console.containers.lora-cloud-form.index.setToken": "Xxx xxxxx",
+  "console.containers.lora-cloud-das-form.index.token": "Xxxxx",
+  "console.containers.lora-cloud-das-form.index.lr1110Encoding": "XXxxxx xxxx xxxxxxxx",
+  "console.containers.lora-cloud-das-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
+  "console.containers.lora-cloud-das-form.index.deleteToken": "Xxxxxx xxxxx",
+  "console.containers.lora-cloud-das-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxxxxx xxxxx? Xxxx xxxxxx xxxxxx xx xxxxxx.",
+  "console.containers.lora-cloud-das-form.index.tokenUpdated": "Xxxxx xxxxxxx",
+  "console.containers.lora-cloud-das-form.index.tokenDeleted": "Xxxxx xxxxxxx",
+  "console.containers.lora-cloud-das-form.index.setToken": "Xxx xxxxx",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx xxxxxxxxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "Xxx/Xxx xxxxxx",
