--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -296,14 +296,14 @@
   "console.containers.gateway-location-form.gateway-location-form.privacy": "Privacy",
   "console.containers.gateway-location-form.gateway-location-form.publishLocation": "Publish location",
   "console.containers.gateways-table.index.ownedTabTitle": "Owned gateways",
-  "console.containers.lora-cloud-form.index.token": "Token",
-  "console.containers.lora-cloud-form.index.lr1110Encoding": "LR1110 demo encoding",
-  "console.containers.lora-cloud-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
-  "console.containers.lora-cloud-form.index.deleteToken": "Delete token",
-  "console.containers.lora-cloud-form.index.deleteWarning": "Are you sure you want to delete the current token? This action cannot be undone.",
-  "console.containers.lora-cloud-form.index.tokenUpdated": "Token updated",
-  "console.containers.lora-cloud-form.index.tokenDeleted": "Token deleted",
-  "console.containers.lora-cloud-form.index.setToken": "Set token",
+  "console.containers.lora-cloud-das-form.index.token": "Token",
+  "console.containers.lora-cloud-das-form.index.lr1110Encoding": "LR1110 demo encoding",
+  "console.containers.lora-cloud-das-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
+  "console.containers.lora-cloud-das-form.index.deleteToken": "Delete token",
+  "console.containers.lora-cloud-das-form.index.deleteWarning": "Are you sure you want to delete the current token? This action cannot be undone.",
+  "console.containers.lora-cloud-das-form.index.tokenUpdated": "Token updated",
+  "console.containers.lora-cloud-das-form.index.tokenDeleted": "Token deleted",
+  "console.containers.lora-cloud-das-form.index.setToken": "Set token",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "There was an error and the list of organizations could not be displayed",
   "console.containers.pubsub-formats-select.index.title": "Pub/Sub format",
